# rendering_06_learning_computational_geometry

./: CMakeLists.txt  README.md  build.bat  build.sh  conanfile.py  win32_conanfile.txt
src/00-polygon_triangulation/: MonotonePartition.h  Triangulation.cpp  Triangulation.h  main.cpp
src/01-convexhull_2d/: Convexhull.cpp  Convexhull.h  main.cpp
src/02-convexhull_3d/: Convexhull.cpp  Convexhull.h  main.cpp
src/03-voronoi_diragram/: Voronoi.cpp  main.cpp
src/04-quad_tree/: QuadTree.h  main.cpp
src/05-kd-tree/: KDTree.cpp  KDTree.h  main.cpp
src/06-BSP/: BinarySpacePartition.h  main.cpp
src/Core/: GeoUtils.cpp
src/Core/Base/: Core.h  Vector.h
src/Core/Primitives/: Boundaries.h  Line.h  Plane.h  Point.h  Polygon.cpp
src/GraphicUtils/: Camera.cpp  Camera.h  GraphicUtils.h  VertexArray.cpp  VertexArray.h
src/GraphicUtils/Geometry/: GFace.h  GLine.h
src/GraphicUtils/Shaders/: basic_poly.shader  basic_poly_2d.shader  cube.shader  generic_line.shader  line.shader  line2.shader  triangle2d.shader
